--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,12 @@ jobs:
           # -r procesa la carpeta recursivamente
           # -d especifica la carpeta de salida
           jsdoc -r src -d out
+          
+      - name: Commit y Push de la carpeta out
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add JSDocumentor/out
+          # Solo hace commit si hay cambios para evitar errores
+          git diff --quiet && git diff --staged --quiet || git commit -m "docs: actualizar JSDocumentor out"
+          git push
